# click-help-colors

./: CHANGES.rst  README.rst  pyproject.toml  setup.py
click_help_colors/: __init__.py  core.py  decorators.py  utils.py
examples/: example.py  example_with_custom_colors.py  multi_commands.py  version_option.py
tests/: test_basic.py  test_custom_colors.py  test_multi_commands.py  test_version_option.py
